refactor(system): 优化角色服务的事务处理和集合操作